Initial commit for all changes

--- a/presentation.qmd
+++ b/presentation.qmd
@@ -21,8 +21,8 @@ execute:
 #| include: false
 
 # Load packages here
-pacman::p_load(tidymodels,
-               tidyverse)
+# pacman::p_load(tidymodels,
+#                tidyverse)
 
 ```
 
@@ -31,25 +31,25 @@ pacman::p_load(tidymodels,
 #| include: false
 
 # Plot theme
-ggplot2::theme_set(ggplot2::theme_minimal(base_size = 11))
-
-# For better figure resolution
-knitr::opts_chunk$set(
-  fig.retina = 3, 
-  dpi = 300, 
-  fig.width = 6, 
-  fig.asp = 0.618 
-  )
+# ggplot2::theme_set(ggplot2::theme_minimal(base_size = 11))
+# 
+# # For better figure resolution
+# knitr::opts_chunk$set(
+#   fig.retina = 3, 
+#   dpi = 300, 
+#   fig.width = 6, 
+#   fig.asp = 0.618 
+#   )
 ```
 
 ```{r}
 #| label: load-data
 #| include: false
 # Load data here
-data(mtcars)
-mtcars$speed <- mtcars$hp / mtcars$wt
-
-data("penguins")
+# data(mtcars)
+# mtcars$speed <- mtcars$hp / mtcars$wt
+# 
+# data("penguins")
 ```
 
 # Using Quarto for presentations
@@ -83,21 +83,21 @@ or in two columns
 ## Code
 
 ```{r, echo=FALSE}
-model <- lm(mpg ~ speed, data = mtcars) 
-
-model |> tidy()
-
-model |> glance()
+# model <- lm(mpg ~ speed, data = mtcars) 
+# 
+# model |> tidy()
+# 
+# model |> glance()
 
 ```
 
 ## Plots
 
 ```{r}
-penguins |>
-  mutate(species = ifelse(species == "Adelie", "Adelie", "Other")) |>
-  ggplot(aes(x = flipper_length_mm, y = body_mass_g, color = species)) +
-  geom_point()
+# penguins |>
+#   mutate(species = ifelse(species == "Adelie", "Adelie", "Other")) |>
+#   ggplot(aes(x = flipper_length_mm, y = body_mass_g, color = species)) +
+#   geom_point()
 ```
 
 ## Plot and text
@@ -111,12 +111,12 @@ penguins |>
 
 ::: {.column width="50%"}
 ```{r, warning=FALSE, fig.width=5.5}
-penguins |>
-  ggplot(aes(x = bill_length_mm, y = species, color = species)) +
-  geom_boxplot(linewidth = 0.75,
-               outlier.size = 2.5) +
-  theme_minimal(base_size = 15) +
-  theme(legend.key.size = unit(0.8, "cm"))
+# penguins |>
+#   ggplot(aes(x = bill_length_mm, y = species, color = species)) +
+#   geom_boxplot(linewidth = 0.75,
+#                outlier.size = 2.5) +
+#   theme_minimal(base_size = 15) +
+#   theme(legend.key.size = unit(0.8, "cm"))
 ```
 :::
 :::
@@ -128,10 +128,10 @@ penguins |>
 If you want to generate a table, make sure it is in the HTML format (instead of Markdown or other formats), e.g.,
 
 ```{r}
-penguins |> 
-  head() |>
-  kableExtra::kable() |>
-  kableExtra::kable_styling()
+# penguins |> 
+#   head() |>
+#   kableExtra::kable() |>
+#   kableExtra::kable_styling()
 ```
 
 ## Images
